# Astravex-Browser

./: CNAME  Cargo.toml  README.md  package.json
Celestis-Browser-Starter/: Cargo.toml  README.md  package.json
Celestis-Browser-Starter/src/: App.tsx
src-tauri/: Cargo.toml
src-tauri/src/: main.rs
src-tauri/src/src-tauri/: tauri.conf.json
