[package]
name = "astravex-browser"
version = "0.1.0"
edition = "2021"
authors = ["OfficialRealGahdly"]
description = "Astravex Browser - Privacy Beyond the Stars."
license = "MIT"

[dependencies]
tauri = { version = "2", features = [] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
