[package]
name = "astravex-browser"
version = "0.1.0"
description = "Astravex Browser"
authors = ["OfficialRealGahdly"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

[features]
default = []
